# parallel-program-homework

./: .gitignore  bk.py  bkk.py  result.txt
finalproject-SDNN/: Makefile  README.md  comp.sh  cpuandgpu.cu  deno.ts  main.c  main.cu  main.tex  mmio.h  mmiohighlevel.h  puresparse.cu  rpcgpu.cu  s  sdnn  trysp.c
finalproject-SDNN/res/: ori  prue.res  withcpu0.res  withcpu1000.res
homework1-gemm/: Makefile  apple.c  kmn  main.c  mkn2  mkn3  mnk  mnpk  mpnk  nkm!  nkm2  nkm3  openblas  openblas1  openblas2  openblas3  oppppp  plot.py  plot2.py  plot3.py  plot6.py  pmnk  ref
homework1-gemm/go/: main.go
homework1-gemm/omp/: pmpnk
homework1-gemm/switch/: kmn  knm  knm_old  mkn  nkm  (+3 more)
homework2-sort/: Makefile  main.c  main.tex  main_old.c  omp12.csv  omp4.csv  omp8.csv  ori.csv  ori.down.csv  ori.downext.csv  ori.up.csv  ori.upext.csv  plot.py  plot33.py  stack  stack.py
homework3-cuda_gemm/: README.md  draw.py  drawops.py  res
homework3-cuda_gemm/cmakeVer/: CMakeLists.txt  cublas_gemm.cu  cuda_gemm.cu  cuda_gemm_share.cu  cuda_yours.cu  gemm.h  main.c  omp_gemm.c
homework4-cuda_spmm/: Makefile  Makefile (copy)  cuda_gemm.cuh  cuda_gemm_shared.cuh  cuda_spmm1.cuh  cusparse_spmm.cuh  gemm.cuh  gemm_cublas.cuh  lib.py  main.cu  process.py  res.csv  spmm.cuh  time.c
homework5-summa/: 1.csv  16.csv  4.csv  Makefile  h5.csv  h52.csv  main.c  main.tex  main_.c  main__.c  newplt.py  plot3.py  run10.sh  structure.tex
labs/: 1.cuh  callCu.c  caller.js  client.c  defines.h  floatplusdouble.c  gemm.cu  minumbug.c  relu.cu  s.c  server.mjs  sparse.cu  sthinteresting.cu
(+6 files in other folders)
